# video-kb-simple

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/: feature-ai-enhancement-plan.md  feature-intelligent-subtitle-classification.md  feature-metadata-check.md
tests/: __init__.py  test_ansi_converter.py  test_cli.py  test_downloader.py  test_signal_handling.py
video_kb_simple/: __init__.py  __main__.py  ansi_converter.py  cli.py  downloader.py  downloader.py.old  logger.py  models.py  safe_exit.py  utils.py  ytdlp_handler.py
